@@ -1,4 +1,4 @@
- .section .di
+ .section .debug_info
  .byte 42
  .rept 32763
  .byte 0
