@@ -1,4 +1,4 @@
- .section .di
+ .section .debug_info
  .byte 44
  .rept 32764
  .byte 0
