@@ -1,4 +1,4 @@
- .section .di
+ .section .debug_info
  .byte 46
  .rept 32765
  .byte 0
