@@ -1,4 +1,4 @@
- .section .di
+ .section .debug_info
  .byte 48
  .rept 32766
  .byte 0
