@@ -1,4 +1,4 @@
- .section .di
+ .section .debug_info
  .byte 50
  .rept 32767
  .byte 0
